tests/profile/error/keybinding/wrongvalue_key.profile
{
  "version": { "major": 1, "minor": 0 },
  "keybindings": [
    {
      "key": "F50",
      "documentation": "T documentation",
      "name": "T name",
      "gui_path": "T Gui-Path",
      "is_local": true,
      "script": "T script"
    }
  ]
}
